# TSH_Control

./: Makefile  README.md  deta_utils.py  preprocess.py  pyproject.toml
TSH_control/: deta_utils.py  main.py  preprocess.py  requirements.txt  utils.py
data/: BloodTests.csv
notebooks/: Analysis of Thyroid metabolism through TSH, FT3 and FT4.ipynb
