[tool.poetry]
name = "health_dashboard"
version = "0.1.0"
description = ""
authors = ["onatselim <onatselim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.1.0"
pandas = "*"
panel = "^0.9.5"
numpy = "^1.18.3"
matplotlib = "^3.2.1"
scipy = "^1.4.1"
sklearn = "^0.0"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
